# prepplease

./: .dockerignore  .gitignore  AGENTS.md  features.md
.agents/commands/: sp.clarify.md  sp.constitution.md  sp.implement.md  sp.specify.md
.claude/commands/: sp.plan.md  sp.tasks.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  create-new-feature.sh  create-phr.sh
.specify/templates/: plan-template.md
backend/: .pre-commit-config.yaml  conftest.py  pyproject.toml
backend/agents/: pyproject.toml
backend/agents/alignment/: __init__.py
backend/agents/blueprint/: __init__.py
backend/agents/evaluation/: __init__.py
backend/agents/generator/: __init__.py
backend/agents/parsing/: __init__.py
backend/agents/src/exambrain_agents/: __init__.py  chunking.py  config.py  errors.py  runner.py  testing.py
backend/agents/src/exambrain_agents/alignment/: __init__.py  agent.py  prompt.py
backend/agents/src/exambrain_agents/blueprint/: __init__.py  agent.py  prompt.py
backend/agents/src/exambrain_agents/evaluation/: __init__.py  agent.py  prompt.py
backend/agents/src/exambrain_agents/generator/: __init__.py  agent.py  prompt.py
backend/agents/src/exambrain_agents/parsing/: __init__.py  agent.py  prompt.py
backend/agents/src/exambrain_agents/pipelines/: __init__.py  evaluate.py  generate.py  ingest.py
backend/agents/src/exambrain_agents/repositories/: __init__.py  course_core.py  exam_sim.py  ingestion.py
backend/agents/src/exambrain_agents/schemas/: __init__.py  alignment.py  blueprint.py  evaluation.py  generation.py  parsing.py
backend/agents/src/exambrain_agents/tools/: __init__.py  extraction.py  matching.py  retrieval.py
backend/agents/tests/: __init__.py  conftest.py  test_agent_alignment.py  test_agent_blueprint.py  test_agent_evaluation.py  test_agent_parsing.py  test_chunking.py  test_live_llm.py  test_pipeline_evaluate.py  test_pipeline_generate.py  test_pipeline_ingest.py  test_repositories_integration.py  test_runner.py  test_tools_extraction.py  test_tools_matching.py  test_tools_retrieval.py
backend/agents/tests/fixtures/: slides.pptx
backend/infra/docker/: docker-compose.yml
backend/infra/docker/postgres/: init-databases.sh
backend/services/course-core/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
backend/services/course-core/alembic/: env.py
backend/services/course-core/alembic/versions/: 20260720_001_course_core_initial_schema.py  20260720_002_instructors.py  20260721_003_foundation_services.py
backend/services/course-core/src/course_core/: __init__.py  auth.py  main.py  webhooks.py
backend/services/course-core/src/course_core/routers/: courses.py  dashboard.py  users.py
backend/services/course-core/tests/: conftest.py  test_courses.py  test_dashboard.py  test_health.py  test_migrations.py  test_users.py  test_webhooks.py
backend/services/exam-simulation/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/services/exam-simulation/alembic/: env.py
backend/services/exam-simulation/alembic/versions/: 20260720_001_exam_sim_initial_schema.py  20260720_002_generated_exams.py  20260720_003_attempt_deadline_answers.py  20260720_004_time_limit_fields.py
backend/services/exam-simulation/src/exam_simulation/: __init__.py  dependencies.py  main.py
backend/services/exam-simulation/src/exam_simulation/routers/: attempts.py  focus.py
backend/services/exam-simulation/src/exam_simulation/schemas/: attempts.py  focus.py
backend/services/exam-simulation/src/exam_simulation/services/: attempt_lifecycle.py  deadline_checker.py  focus_tracker.py
backend/services/exam-simulation/tests/: conftest.py  test_api.py  test_attempt_lifecycle.py  test_deadline_checker.py  test_focus_tracker.py  test_health.py  test_migrations.py
backend/services/ingestion-pipeline/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
backend/services/ingestion-pipeline/alembic/: env.py
backend/services/ingestion-pipeline/alembic/versions/: 20260720_001_ingestion_initial_schema.py  20260720_002_parsing_state.py  20260721_003_content_hash_index.py
backend/services/ingestion-pipeline/src/ingestion_pipeline/: __init__.py  auth.py  main.py  s3.py  tasks.py
backend/services/ingestion-pipeline/src/ingestion_pipeline/routers/: papers.py  status.py  upload.py
backend/services/ingestion-pipeline/tests/: conftest.py  test_health.py  test_migrations.py  test_status.py  test_upload.py
backend/shared/: pyproject.toml
backend/shared/src/exambrain_shared/: __init__.py  config.py  db.py  errors.py  iam.py  llm.py  llm_usage.py  logging.py  redis.py  s3.py
backend/shared/src/exambrain_shared/models/: __init__.py  course_core.py  exam_sim.py  ingestion.py
backend/shared/tests/: conftest.py  test_config.py  test_llm.py  test_migrations.py  test_models.py  test_redis_store.py  test_s3.py
backend/tests/: test_config.py  test_db.py  test_iam.py  test_migrations.py  test_models.py  test_stubs.py
docs/superpowers/specs/: 2026-07-22-exam-simulation-service-design.md
history/prompts/001-project-scaffold/: 0001-clarify-project-scaffold-spec.spec.prompt.md  0002-plan-project-scaffold.plan.prompt.md  0003-generate-scaffold-tasks.tasks.prompt.md  0004-implement-project-scaffold.green.prompt.md
history/prompts/002-foundation-adapters/: 0001-specify-foundation-adapters.spec.prompt.md  0002-clarify-foundation-adapters-spec.spec.prompt.md  0003-foundation-adapters-implementation-plan.plan.prompt.md  0004-generate-foundation-adapters-tasks.tasks.prompt.md  (+1 more)
specs/001-project-scaffold/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-foundation-adapters/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-phase2-agents/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-foundation-services/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-exam-simulation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+35 files in other folders)
