[project]
name = "exambrain-agents"
version = "0.1.0"
description = "ExamBrain Phase 2 agents library (parsing, alignment, blueprint, generator, evaluation)"
requires-python = ">=3.12"
dependencies = [
    "exambrain-shared",
    "openai-agents[litellm]>=0.2",
    "pypdfium2>=4.30",
    "pytesseract>=0.3.13",
    "python-pptx>=1.0",
    "rapidfuzz>=3.10",
]

[tool.uv.sources]
exambrain-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exambrain_agents"]
