[project]
name = "exambrain-shared"
version = "0.1.0"
description = "Shared library for ExamBrain backend services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "prometheus-client>=0.21",
    "litellm>=1.52",
    "tenacity>=9.0",
    "redis>=5",
    "aioboto3>=13.2",
    "pgvector>=0.3",
    "alembic>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exambrain_shared"]
