[project]
name = "ingestion-pipeline"
version = "0.1.0"
description = "ExamBrain ingestion-pipeline service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "alembic>=1.14",
    "clerk-backend-api>=1.0",
    "svix>=1.0",
    "python-multipart>=0.0.18",
    "exambrain-shared",
]

[tool.uv.sources]
exambrain-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion_pipeline"]
